<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/textview"
            android:layout_width="55dp"
            android:layout_height="28dp" android:id="@+id/textView"
            tools:layout_editor_absoluteY="524sp"
            tools:layout_editor_absoluteX="1sp"
            tools:ignore="MissingConstraints"/>
    <RadioButton
            android:text="@string/s_ch_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1" tools:layout_editor_absoluteY="124sp"
            tools:layout_editor_absoluteX="16sp"
            tools:ignore="MissingConstraints"/>
    <RadioButton
            android:text="@string/s_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            tools:layout_editor_absoluteY="92sp"
            tools:layout_editor_absoluteX="16sp"
            tools:ignore="MissingConstraints"/>
    <RadioButton
            android:text="@string/scp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            tools:layout_editor_absoluteY="60sp"
            tools:layout_editor_absoluteX="16sp" tools:ignore="MissingConstraints"/>
    <ListView
            android:layout_width="409dp"
            android:layout_height="293dp"
            android:id="@+id/listViewShow"
            tools:layout_editor_absoluteY="231dp"
            tools:layout_editor_absoluteX="1dp"
            tools:ignore="MissingConstraints"/>
    <Button
            android:text="@string/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            tools:layout_editor_absoluteY="168sp"
            tools:layout_editor_absoluteX="16sp"
            tools:ignore="MissingConstraints"/>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/abc"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="34dp"
            tools:ignore="MissingConstraints">

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"

            tools:layout_editor_absoluteY="2sp"
            tools:layout_editor_absoluteX="0sp"
            tools:ignore="MissingConstraints"/>
</androidx.constraintlayout.widget.ConstraintLayout>